--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:text="Large Text"
+        android:text="."
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
